fixed home text on mobile devices

--- a/CSS/components/header.css
+++ b/CSS/components/header.css
@@ -1,4 +1,4 @@
-@media (min-width: 1301px) {
+@media (min-width: 1400px) {
     .small_header {
         display: none;
     }
@@ -59,18 +59,3 @@
     margin-top: -3%;
 }
 
-@media (max-width: 480px) {
-
-}
-
-@media (min-width: 481px) and (max-width: 768px){
-
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-
-}
-
-@media (min-width: 1025px) and (max-width: 1500px) {
-
-}
