--- a/CSS/components/homeText.css
+++ b/CSS/components/homeText.css
@@ -14,8 +14,51 @@
   font-weight: 100;
   font-size: 30px;
   text-align: left;
-  width: 70%;
+  width: 82%;
   margin: 0 auto;
   margin-top: 5px;
   letter-spacing: 2px;
 }
+
+@media (max-width: 1400px) {
+  
+}
+
+@media (max-width: 1300px), (min-width: 1000px) {
+  
+}
+
+@media (max-width: 999px), (min-width: 500px) {
+
+}
+
+@media (max-width: 499px) {
+  .home_main_text {
+    font-size: 12px;
+  }
+
+  .para_c1 {
+    font-size: 0.8rem;
+    margin-top: -30px;
+    margin-bottom: 20px;
+  }
+  
+  .container1 {
+    background-color: white;
+  }
+
+  .para_c1::before, .para_c1::after {
+    height: 1px;
+  }
+
+  .para_c1_line {
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+
+  .para_c1_line::after {
+    height: 1px;
+  }
+}
+
+
