--- a/CSS/components/infoBox.css
+++ b/CSS/components/infoBox.css
@@ -5,46 +5,36 @@
 
 .info-box {
     font-family: 'Roboto', sans-serif;
-    position: relative; 
-    width: 80%; 
+    position: relative;
+    width: 80%;
     height: 80%;
     text-align: center;
     border-radius: 10px;
-    padding: 20px;
-    box-sizing: border-box;
-    margin: 0 auto;
-    margin-top: -2%;
     padding: 30px;
+    box-sizing: border-box;
+    margin: 0 auto auto auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 2; 
-    margin-top: auto;
+    z-index: 2;
 }
 
-.info_box_header {
-    width: 100%;
-    text-align: center;
-}
-
-.info_box_header h1{
-    margin-top: 0;
-    margin-bottom: 0;
-    font-weight: normal;
-}
-
-.info_box_header {
+.info_box_header, .header_mein_hundetraining {
     font-family: 'Roboto', sans-serif;
     font-size: 3rem;
-    font-weight: normal;
     text-align: center;
     margin: 40px;
     position: relative;
     padding: 20px;
 }
 
-.info_box_header h1::before {
+.info_box_header h1, .header_mein_hundetraining h1 {
+    margin: 0;
+    font-weight: normal;
+}
+
+.info_box_header h1::before, .header_mein_hundetraining::before, .header_mein_hundetraining::after {
     content: '';
     position: absolute;
     left: 10%;
@@ -72,54 +62,28 @@
     width: 70%;
 }
 
-@media (max-width: 480px) {
-    .info-box p {
-        margin: 0;
-        font-size: 1.4rem;
-        width: 120%;
-        margin-top: 20px;
+/* Media Queries */
+@media (max-width: 499px) {
+    .home_main_text {
+        font-size: 12px;
     }
 
-    .info-box h1 {
-        margin: 0;
-        font-size: 1.6rem;
-        margin: auto;
-        padding: 10px;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 768px){
-    .info-box p {
-        margin: 0;
-        font-size: 1.4rem;
-        width: 120%;
-        margin-top: 20px;
+    .header_mein_hundetraining {
+        font-size: 0.8rem;
+        margin-top: -30px;
+        margin-bottom: 20px;
     }
 
-    .info-box h1 {
-        margin: 0;
-        font-size: 1.6rem;
-        margin: auto;
-        padding: 10px;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-    .info-box p {
-        margin: 0;
-        font-size: 1.4rem;
-        width: 120%;
-        margin-top: 20px;
+    .container1 {
+        background-color: white;
     }
 
-    .info-box h1 {
-        margin: 0;
-        font-size: 1.6rem;
-        margin: auto;
-        padding: 10px;
+    .header_mein_hundetraining::before, .header_mein_hundetraining::after {
+        height: 1px;
     }
-}
 
-@media (min-width: 1025px) and (max-width: 1500px) {
-
+    .para_c1_line {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
 }
